Eclipse 4.21 (M2) JDT Patch for Groovy-Eclipse
https://git.eclipse.org/c/jdt/eclipse.jdt.core.git/tag/?h=I20210729-1800

#1276